objects/License_Entitlements__c.object
<CustomObject>
    <fields>
        <fullName>License_Entitlements__c</fullName>
        <label>Product/Component License Entitlements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Information</label>
        <referenceTo>LicenseInformation__c</referenceTo>
        <relationshipLabel>Sellable Items</relationshipLabel>
        <relationshipName>Sellable_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sellable_Items__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sellable Items</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>License_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sellable Item</label>
    <nameField>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sellable Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>